--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -136,3 +136,105 @@ ul {
   background-color: #c42743;
   color: #fff;
 }
+
+/* Home */
+.home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  font-family: Arial, sans-serif;
+}
+.welcome{
+  font-size: 25px;
+  margin-bottom: -20px;
+}
+.bottom-svg {
+  position: absolute;
+  bottom: 0;
+  width: 97.5%;
+  padding: 0px;
+  height: auto;
+}
+.welcome-message {
+  text-align: left;
+  padding-top: 18%;
+}
+svg {
+  margin-left: -15.5px;
+  margin-right: -15.5px;
+}
+.user-name {
+  color: #9C0C27;
+  font-size: 50px
+}
+
+/* Switch */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+input:checked + .slider {
+  background-color: #1a970e;
+}
+input:focus + .slider {
+  box-shadow: 0 0 1px #1a970e;
+}
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+.slider.round {
+  border-radius: 34px;
+}
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* Select2 */
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+  line-height: 24px;
+  padding-left: 10px;
+}
+.select2-container .select2-selection--single {
+  height: 35px;
+  padding-left: 0px;
+}
+.select2-container .select2-dropdown {
+  z-index: 9999;
+}
+.select2-container--default .select2-results__option--highlighted.select2-results__option--selectable  {
+  background-color: #9C0C27 !important;
+  color: rgb(248, 243, 243) !important;
+}
